<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="quiz"
            type="com.danielhritcu.mathquiz.models.Quiz" />
    </data>

    <LinearLayout
        style="@style/ResultsItemMainLayout">

        <LinearLayout style="@style/ResultsItemLinearLayout">

            <TextView
                style="@style/ResultsItemLabel"
                android:text="@string/question_label" />

            <TextView
                style="@style/ResultsItemLabel"
                android:text="@string/answer_label" />

            <TextView
                style="@style/ResultsItemLabel"
                android:text="@string/solution_label" />
        </LinearLayout>

        <LinearLayout style="@style/ResultsItemLinearLayout">

            <TextView
                style="@style/ResultsItemValueLabel"
                android:text="@{quiz.question}"/>

            <TextView
                style="@style/ResultsItemValueLabel"
                android:text="@{quiz.answer}"/>

            <TextView
                style="@style/ResultsItemValueLabel"
                android:text="@{quiz.solution}"/>

        </LinearLayout>
    </LinearLayout>

</layout>